Outliner: Hiding in viewport a Collection does not gray out its children objects #77161

Closed
opened 2020-05-29 14:25:09 +02:00 by Manuel Castilla · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90 (sub 4), branch: master, commit date: 2020-05-29 09:31, hash: 582d3153a1

Short description of error
In the outliner when you click the "Hide in Viewport" icon of a collection, the collection itself and its children collections are grayed out but its children objects are not.
Doesn't make sense to me, if a parent gets grayed out (not visible) so should be all his children.
The icons are correctly grayed out but not the left part.
"Disable in Viewports" option works as expected.
This is happening in older versions too, at least in 2.82 is the same.

Exact steps for others to reproduce the error

  1. Add a new collection to "Collection"
  2. Click the "Hide in Viewport" icon of "Collection"

Just to compare to other use cases I add this video, no need to reproduce the steps in the video

{F8562990,size=full}

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90 (sub 4), branch: master, commit date: 2020-05-29 09:31, hash: `582d3153a1` **Short description of error** In the outliner when you click the "Hide in Viewport" icon of a collection, the collection itself and its children collections are grayed out but its children objects are not. Doesn't make sense to me, if a parent gets grayed out (not visible) so should be all his children. The icons are correctly grayed out but not the left part. "Disable in Viewports" option works as expected. This is happening in older versions too, at least in 2.82 is the same. **Exact steps for others to reproduce the error** 1. Add a new collection to "Collection" 2. Click the "Hide in Viewport" icon of "Collection" Just to compare to other use cases I add this video, no need to reproduce the steps in the video {[F8562990](https://archive.blender.org/developer/F8562990/ZegLDOI67K.mp4),size=full}
Author
Member

Added subscriber: @manzanilla

Added subscriber: @manzanilla
Author
Member

It's strange but I think this has not being reported before. I searched and found nothing.
It's a minor bug but would make user experience better if it's fixed. I think I have a fix for it, if is considered a bug.

It's strange but I think this has not being reported before. I searched and found nothing. It's a minor bug but would make user experience better if it's fixed. I think I have a fix for it, if is considered a bug.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

@manzanilla Feel free to submit patch regardless of this being a bug.

@manzanilla Feel free to submit patch regardless of this being a bug.
Manuel Castilla self-assigned this 2020-06-05 01:11:08 +02:00

This issue was referenced by 20e982e78d

This issue was referenced by 20e982e78d71c5d55b041ddfef0de306d779469a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77161
No description provided.