source/blender/editors/space_outliner/outliner_tree.c
@@ -1556,7 +1556,7 @@ static void outliner_add_layer_collection_objects(SpaceOutliner *space_outliner,
     TreeElement *te_object = outliner_add_element(space_outliner, tree, base->object, ten, 0, 0);
     te_object->directdata = base;
 
-    if (!(base->flag & BASE_VISIBLE_DEPSGRAPH)) {
+    if (!(base->flag & BASE_VISIBLE_VIEWLAYER)) {
       te_object->flag |= TE_DISABLED;
     }
   }
